security_group.tf
resource "aws_default_vpc" "default" {
}

# Security Group for Jenkins Ubuntu 20 Server
resource "aws_security_group" "Jenkins_Server_sg" {
  name   = "Jenkins_server_sg_terraform"
  vpc_id = aws_default_vpc.default.id

  #incoming ssh traffic
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #Jenkins port
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Security Group for Sonarqube Ubuntu 18 Server
resource "aws_security_group" "Sonar_Server_sg" {
  name   = "Sonar_server_sg_terraform"
  vpc_id = aws_default_vpc.default.id

  #incoming ssh traffic
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #incoming http traffic from Nexus Repo
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #Sonarqube port
  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Security Group for Nexus Cent OS 7 Server
resource "aws_security_group" "Nexus_Server_sg" {
  name   = "Nexus_server_sg_terraform"
  vpc_id = aws_default_vpc.default.id

  #incoming ssh traffic
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #Nexus port
  ingress {
    from_port   = 8081
    to_port     = 8081
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Security Group for Tomcat Ubuntu 20 Server
resource "aws_security_group" "Tomcat_Server_sg" {
  name   = "Tomcat_server_sg_terraform"
  vpc_id = aws_default_vpc.default.id

  #incoming ssh traffic
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # Tomcat port
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
